--- a/src/mvc/employee/view/EmployeeData.fxml
+++ b/src/mvc/employee/view/EmployeeData.fxml
@@ -29,7 +29,7 @@
                         <TableColumn fx:id="jobIdColumn" prefWidth="75.0" text="Stanowisko" />
                         <TableColumn fx:id="salaryColumn" prefWidth="75.0" text="Wynagrodzenie" />
                         <TableColumn fx:id="managerIdColumn" prefWidth="75.0" text="Id przełożonego" />
-                        <TableColumn fx:id="departmentIdColumn" prefWidth="75.0" text="Id działu" />
+                        <TableColumn fx:id="departmentNameColumn" prefWidth="75.0" text="Nazwa działu" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -80,8 +80,8 @@
                         <Label fx:id="salaryLabel" text="Salary" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                         <Label text="Id przełożonego" GridPane.rowIndex="8" />
                         <Label fx:id="managerIdLabel" text="ManagerId" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                        <Label text="Id działu" GridPane.rowIndex="9" />
-                        <Label fx:id="departmentIdLabel" text="DepartmentId" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                        <Label text="Nazwa działu" GridPane.rowIndex="9" />
+                        <Label fx:id="departmentNameLabel" text="DepartmentName" GridPane.columnIndex="1" GridPane.rowIndex="9" />
                      </children>
                   </GridPane>
                   <ToolBar layoutX="194.0" layoutY="344.0" prefHeight="40.0" prefWidth="208.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
