--- a/src/mvc/employee/view/EmployeeData.fxml
+++ b/src/mvc/employee/view/EmployeeData.fxml
@@ -26,7 +26,7 @@
                         <TableColumn fx:id="emailColumn" prefWidth="75.0" text="E-mail" />
                         <TableColumn fx:id="phoneNameColumn" prefWidth="75.0" text="Telefon" />
                         <TableColumn fx:id="hireDateColumn" prefWidth="75.0" text="Data zatrudnienia" />
-                        <TableColumn fx:id="jobIdColumn" prefWidth="75.0" text="Stanowisko" />
+                        <TableColumn fx:id="jobTitleColumn" prefWidth="75.0" text="Stanowisko" />
                         <TableColumn fx:id="salaryColumn" prefWidth="75.0" text="Wynagrodzenie" />
                         <TableColumn fx:id="managerNameColumn" prefWidth="75.0" text="Przełożony" />
                         <TableColumn fx:id="departmentNameColumn" prefWidth="75.0" text="Nazwa działu" />
@@ -75,7 +75,7 @@
                         <Label text="Data zatrudnienia" GridPane.rowIndex="5" />
                         <Label fx:id="hireDateLabel" text="HireDate" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                         <Label text="Stanowisko" GridPane.rowIndex="6" />
-                        <Label fx:id="jobIdLabel" text="JobId" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label fx:id="jobTitleLabel" text="JobTitle" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                         <Label text="Wynagrodzenie" GridPane.rowIndex="7" />
                         <Label fx:id="salaryLabel" text="Salary" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                         <Label text="Przełożony" GridPane.rowIndex="8" />
