--- a/src/mvc/employee/view/EmployeeData.fxml
+++ b/src/mvc/employee/view/EmployeeData.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.employee.view.EmployeeController">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.employee.view.EmployeeController">
    <children>
       <SplitPane dividerPositions="0.5551378446115288" layoutX="14.0" layoutY="14.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -86,7 +86,7 @@
                   </GridPane>
                   <ToolBar layoutX="194.0" layoutY="344.0" prefHeight="40.0" prefWidth="167.0" AnchorPane.bottomAnchor="15.0" AnchorPane.rightAnchor="15.0">
                     <items>
-                      <Button mnemonicParsing="false" text="Wstaw" />
+                      <Button mnemonicParsing="false" onAction="#insertEmployee" text="Wstaw" />
                         <Button mnemonicParsing="false" onAction="#editEmployee" text="Edytuj" />
                         <Button mnemonicParsing="false" onAction="#deleteEmployee" text="Usuń" />
                     </items>
